GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.18alpha15 :
    
        - Names can now begin with a digit.
        
        - Small fix for quotas set on printers groups.
        
    - 1.18alpha14 :
    
        - Catches more (all ?) problems with SMTP servers instead
          of breaking.
          
        - Italian translation added.
        
    - 1.18alpha13 :
    
        - Pre and Post hooks are now available in the pykota
          filter as well.
          
        - The pykota filter doesn't check last user's quota
          anymore when delayed hardware accounting is used : 
          this will be done anyway the next time the last 
          user will print again. This saves some database
          queries which are unneeded.
        
    - 1.18alpha12 :
    
        - Pre and Post hooks to external commands with many 
          many environment variables available are useable 
          from the cupspykota backend.
          See sample configuration file for details and help.
          
    - 1.18alpha11 : 
    
        - Hopefully final fix wrt groups (users and printers)
        
    - 1.18alpha10 :
    
        - Fixed nested printer groups accounting.
        
        - Fixed user groups + printer groups problem.
        
    - 1.18alpha9 :
    
        - Fix for LDAP problem when job price was 0.
        
        - Fix for empty user groups with LDAP.
        
        - Preliminary version of the snmpprinterstatus command added.
        
    - 1.18alpha8 :
    
        - Don't retrieve data when not needed.
          This avoids many database queries.
        
    - 1.18alpha7 :
    
        - New experimental ldapcache directive to improve
          LDAP caching.